--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -190,3 +190,23 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* For Chrome, Safari, and Opera */
+::-webkit-scrollbar {
+  width: 10px; /* For vertical scrollbar */
+  height: 10px; /* For horizontal scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #444; /* Track background */
+  border-radius: 10px; /* Rounded corners */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #a3a3a3; /* Thumb background */
+  border-radius: 10px; /* Rounded corners */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #888888; /* Thumb hover background */
+}
